--- a/.github/workflows/vapoursynthEncoder.yml
+++ b/.github/workflows/vapoursynthEncoder.yml
@@ -229,6 +229,11 @@ jobs:
         uses: rokibhasansagar/custom_workflows/git_config@main
         env:
           PAT: ${{ secrets.GH_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Download Source Media from Artifact
         uses: actions/download-artifact@v3
         with:
