--- a/.github/workflows/vapoursynthEncoder.yml
+++ b/.github/workflows/vapoursynthEncoder.yml
@@ -14,6 +14,9 @@ on:
         - "Heavenly.Delusion"
         - "Hells.Paradise.Jigokuraku"
         - "Insomniacs.After.School"
+        - "The.Eminence.in.Shadow"
+        - "Futoku.no.Guild"
+        - "Komi.Cant.Communicate"
         - "Miraculous.Tales.of.Ladybug.and.Cat.Noir"
       EpLabel:
         description: "EpLabel, S0[0-9]E[0-9][0-9]"
